// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage should show the component with product's image 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product illustration"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;

exports[`ProductImage should show the component with the image url correctly 1`] = `
<img
  alt="Product illustration"
  className="productImg undefined"
  src="https://i.insider.com/60638bd66183e1001981966a?width=1136&format=jpeg"
/>
`;
